[metadata]
name = relax
version = 0.1.0
author = Nikita Lyubaykin
author_email = nslyubaykin@yandex.ru
description = ReLAx - Reinforcement learning applications library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nslyubaykin/relax
project_urls =
    Source = https://github.com/nslyubaykin/relax
    Bug Tracker = https://github.com/nslyubaykin/relax/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
